--- a/docs/vame-docs-app/docs/getting_started/running.mdx
+++ b/docs/vame-docs-app/docs/getting_started/running.mdx
@@ -37,7 +37,7 @@ To run the demo you will need a video and a csv file with the pose estimation re
 ### 2. Running the demo main pipeline
 We will now show you how to run the main pipeline of the VAME workflow using  snnipets of code. We suggest you to run these snippets in a jupyter notebook.
 
-#### 2.1 Setting the demo variables
+#### 2.1a Setting the demo variables using CSV files
 To start the demo you must define 4 variables:
 ```python
 import vame
@@ -57,9 +57,35 @@ videos = ['video-1.mp4']
 poses_estimations = ['video-1.csv']
 ```
 
+#### 2.1b Setting the demo variables using NWB files
+Alternativaly you can use `.nwb` files as pose estimation files. In this case you must define 4 variables:
+```python
+import vame
+
+
+# The directory where the project will be saved
+working_directory = '.'
+
+# The name you want for the project
+project = 'my-vame-project'
+
+# A list of paths to the videos file
+videos = ['video-1.mp4']
+
+# A list of paths to the poses estimations files.
+# Important: The name (without the extension) of the video file and the pose estimation file must be the same. E.g. `video-1.mp4` and `video-1.nwb`
+poses_estimations = ['video-1.nwb']
+
+# A list of paths in the NWB file where the pose estimation data is stored.
+paths_to_pose_nwb_series_data = ['processing/behavior/data_interfaces/PoseEstimation/pose_estimation_series']
+```
+
+
+
 #### 2.2 Initializing the project
 With the variables set, you can initialize the project by running the following code:
 
+If you are using CSV files you can run the following code to initialize the project:
 ```python
 config = vame.init_new_project(
     project=project,
@@ -69,6 +95,19 @@ config = vame.init_new_project(
     videotype='.mp4'
 )
 ```
+
+If you are using NWB files you can run the following code to initialize the project:
+```python
+config = vame.init_new_project(
+    project=project,
+    videos=videos,
+    poses_estimations=poses_estimations,
+    working_directory=working_directory,
+    videotype='.mp4',
+    paths_to_pose_nwb_series_data=paths_to_pose_nwb_series_data
+)
+```
+
 This command will create a project folder in the defined working directory with the name you set in the `project` variable and a date suffix, e.g: `my-vame-project-May-9-2024`.
 In this folder you can find a config file called `config.yaml` where you can set the parameters for the VAME algorithm.
 The videos and poses estimations files will be copied to the project videos folder. It is really important to define in the `config.yaml` file if your data is egocentrically aligned or not before running the rest of the workflow.
