rename pose_segmentation → segment_session

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Step 4: Segment motifs/pose\n",
-    "vame.pose_segmentation(config)"
+    "vame.segment_session(config)"
    ]
   },
   {
