video_sets -> session_names, file-> session

--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -41,7 +41,7 @@
     "    videos=videos,\n",
     "    poses_estimations=poses_estimations,\n",
     "    working_directory=working_directory,\n",
-    "    videotype='.mp4'\n",
+    "    video_type='.mp4'\n",
     ")"
    ]
   },
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "# # OPTIONAL: Create motif videos to get insights about the fine grained poses\n",
-    "vame.motif_videos(config, videoType='.mp4', segmentation_algorithm='hmm')"
+    "vame.motif_videos(config, video_type='.mp4', segmentation_algorithm='hmm')"
    ]
   },
   {
