--- a/examples/demo.ipynb
+++ b/examples/demo.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "# Step 1.1: Initialize your project\n",
     "config = vame.init_new_project(\n",
-    "    project=project,\n",
+    "    project_name=project,\n",
     "    videos=videos,\n",
     "    poses_estimations=poses_estimations,\n",
     "    working_directory=working_directory,\n",
