update example notebook

--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -35,6 +35,13 @@
     "videos = [ps[\"video\"]]\n",
     "poses_estimations = [ps[\"poses\"]]\n",
     "\n",
+    "# Customize the configuration for the project\n",
+    "config_kwargs = {\n",
+    "    \"n_clusters\": 15,\n",
+    "    \"pose_confidence\": 0.9,\n",
+    "    \"max_epochs\": 10,\n",
+    "}\n",
+    "\n",
     "# Instantiate the pipeline\n",
     "# this will create a VAME project and prepare the data\n",
     "pipeline = VAMEPipeline(\n",
@@ -43,6 +50,7 @@
     "    videos=videos,\n",
     "    poses_estimations=poses_estimations,\n",
     "    source_software=source_software,\n",
+    "    config_kwargs=config_kwargs,\n",
     ")"
    ]
   },
@@ -64,7 +72,11 @@
    "outputs": [],
    "source": [
     "# Run the pipeline\n",
-    "pipeline.run_pipeline()"
+    "preprocessing_kwargs = {\n",
+    "    \"centered_reference_keypoint\": \"snout\",\n",
+    "    \"orientation_reference_keypoint\": \"tail_base\",\n",
+    "}\n",
+    "pipeline.run_pipeline(preprocessing_kwargs=preprocessing_kwargs)"
    ]
   },
   {
