--- a/examples/pipeline.ipynb
+++ b/examples/pipeline.ipynb
@@ -22,6 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pprint\n",
     "from vame.pipeline import VAMEPipeline\n",
     "from vame.util.sample_data import download_sample_data"
@@ -72,13 +82,13 @@
    "source": [
     "# Set up your working directory and project name\n",
     "working_directory = '.'\n",
-    "project_name = 'pipeline_example'\n",
+    "project_name = 'pipeline_example_0'\n",
     "\n",
     "# Customize the configuration for the project\n",
     "config_kwargs = {\n",
     "    \"n_clusters\": 15,\n",
     "    \"pose_confidence\": 0.9,\n",
-    "    \"max_epochs\": 300,\n",
+    "    \"max_epochs\": 10, #300,\n",
     "}\n",
     "\n",
     "# Instantiate the pipeline\n",
@@ -124,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "preprocessing_kwargs = {\n",
@@ -146,14 +158,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pipeline.visualize_preprocessing(\n",
+    "    show_figure=True,\n",
+    "    save_to_file=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline.visualize_prepocessing(\n",
-    "    scatter=True,\n",
-    "    timeseries=True,\n",
-    "    show_figure=True,\n",
+    "pipeline.visualize_model_losses(\n",
     "    save_to_file=False,\n",
+    "    show_figure=True,\n",
     ")"
    ]
   },
@@ -166,7 +190,24 @@
     "pipeline.visualize_umap(\n",
     "    label=\"community\",\n",
     "    segmentation_algorithm=\"hmm\",\n",
+    "    show_figure=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Produce the pipeline report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.report()"
    ]
   },
   {
@@ -185,13 +226,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline.run_pipeline(from_step=6)"
+    "pipeline.run_pipeline(from_step=5)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vame",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -209,5 +250,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
