documentation examples - wip

--- a/docs/vame-docs-app/docs/getting_started/pipeline.mdx
+++ b/docs/vame-docs-app/docs/getting_started/pipeline.mdx
@@ -10,4 +10,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 import IframeResizer from '@site/src/components/IframeResizer';
 
+The notebook below is available [here](https://github.com/EthoML/VAME/blob/main/examples/pipeline.ipynb).
+
 <IframeResizer src={useBaseUrl('/notebooks_html/pipeline.html')} />
