--- a/docs/vame-docs-app/docs/getting_started/step_by_step.mdx
+++ b/docs/vame-docs-app/docs/getting_started/step_by_step.mdx
@@ -1,38 +1,40 @@
 ---
-title: Running VAME Workflow
+title: VAME step-by-step
 sidebar_position: 2
 ---
 
-
-
-## Workflow Overview
-The below diagram shows the workflow of the VAME application, which consists of four main steps and optional steps to analyse your data.
-![Workflow Overview](/img/workflow_overview.png)
-1. Initialize project: This is step is responsible by starting the project, getting your data into the right format and creating a training dataset for the VAME deep learning model.
-2. Train neural network: Train a variational autoencoder which is parameterized with recurrent neural network to embed behavioural dynamics
-3. Evaluate performance: Evaluate the trained model based on its reconstruction capabilities
-4. Segment behavior: Segment behavioural motifs/poses/states from the input time series
-5. Quantify behavior:
+The VAME workflow consists of four main steps, plus optional steps to analyse your data:
+1. Initialize project: This is step is responsible by starting the project, getting your pose estimation data into the right format
+2. Preprocess: This step is responsible for cleaning, filtering and aligning the pose estimation data
+3. Train neural network:
+    - Create a training dataset for the VAME deep learning model.
+    - Train a variational autoencoder which is parameterized with recurrent neural network to embed behavioural dynamics.
+    - Evaluate the performance of the trained model based on its reconstruction capabilities
+4. Segment behavior:
+    - Segment pose estimation time series into behavioral motifs, using HMM or K-means.
+    - Group similar motifs into communities, using hierarchical clustering.
+5. Analysis:
     - Optional: Create motif videos to get insights about the fine grained poses.
-    - Optional: Investigate the hierarchical order of your behavioural states by detecting communities in the resulting markov chain.
     - Optional: Create community videos to get more insights about behaviour on a hierarchical scale.
     - Optional: Visualization and projection of latent vectors onto a 2D plane via UMAP.
     - Optional: Use the generative model (reconstruction decoder) to sample from the learned data distribution, reconstruct random real samples or visualize the cluster centre for validation.
-    - Optional: Create a video of an egocentrically aligned animal + path through the community space (similar to our gif on github readme).
+    - Optional: Create a video of an egocentrically aligned animal + path through the community space.
 
 :::tip
-⚠️ Check out also the published VAME Workflow Guide, including more hands-on recommendations and tricks [HERE](https://www.nature.com/articles/s42003-022-04080-7#Sec8).
+Check out also the published VAME Workflow Guide, including more hands-on recommendations [HERE](https://www.nature.com/articles/s42003-022-04080-7#Sec8).
 :::
 
 
-## Running a demo workflow
-In our github in `/examples` folder there is a demo script called `demo.py` that you can use to run a simple example of the VAME workflow. To run this workflow you will need to do the following:
+## Running VAME, step-by-step
+
+In this tutorial we will show you how to run the VAME workflow step-by-step using a simple example. The code below can also be found in the `demo.py` script in our Github repository ([link here](https://github.com/EthoML/VAME/blob/main/examples/demo.py)).
 
 
-### 1. Download the necessary resources:
+### 0. Download the necessary resources:
 To run the demo you will need a video and a csv file with the pose estimation results. You can use the following files links:
 - `video-1.mp4`: Video file [link](https://drive.google.com/file/d/1w6OW9cN_-S30B7rOANvSaR9c3O5KeF0c/view)
 - `video-1.csv`: Pose estimation results [link](https://github.com/EthoML/VAME/blob/master/examples/video-1.csv)
+
 
 ### 2. Running the demo main pipeline
 We will now show you how to run the main pipeline of the VAME workflow using  snnipets of code. We suggest you to run these snippets in a jupyter notebook.
@@ -170,7 +172,7 @@ To create behavioral hierarchies and communities detection run:
 ```python
 vame.community(config, parametrization='hmm', cut_tree=2, cohort=False)
 ```
-It will produce a tree plot of the behavioural hierarchies using hmm motifs. 
+It will produce a tree plot of the behavioural hierarchies using hmm motifs.
 
 #### 3.3 Community Videos
 Create community videos to get insights about behavior on a hierarchical scale.
