fix broken link

--- a/docs/vame-docs-app/docs/getting_started/pipeline.mdx
+++ b/docs/vame-docs-app/docs/getting_started/pipeline.mdx
@@ -1,8 +1,8 @@
 ---
-id: run-pipeline
+id: pipeline
 title: Run Pipeline
 sidebar_position: 3
-slug: /getting_started/run-pipeline
+slug: /getting_started/pipeline
 ---
 
 import React from 'react';
